# ngpcx

./: .gitignore  ASSESSMENT_ARCHITECTURE.md  CLAUDE.md  INSTRUMENT_PANEL.md  NGPCX-project-summary.md  PRIVACY_BACKLOG.md  PROJECT_BRIEF-260703.md  PROJECT_BRIEF-260704.md  PROJECT_BRIEF-260705.md  PROJECT_BRIEF-260717.md  README.md  WORKLOAD_ASSESSMENT_INVESTIGATION.md  WORKSPACE.md  git-sync.sh  package-lock.json  package.json  tsconfig.json  tsconfig.scanner.json  tsconfig.scrapers.json
.cache/windowsupdatecatalog/: debug_raw.html
.cache/winget/: manifests_0_0_don_clippy_1_5_12_0_don_clippy_installer_yaml.json  manifests_0_0state_scafld_2_4_8_0state_scafld_installer_yaml.json  manifests_a_ART_ART_1_26_6_ART_ART_installer_yaml.json  (+1535 more)
.claude/: launch.json
app/: globals.css  layout.tsx  page.tsx
branding/: README.md
components/: Logo.tsx
data/: compatibility.db  compatibility.json  devices.json  saveArmEntries.ts  scan-results.json
public/: about.html  admin-community-review.html  admin-dashboard.html  admin-research.html  admin-revisit.html  admin-users.html  assessment.css  assessment.js  how-it-thinks.html  index.html  my-submissions.html  nav.js  privacy.html  report.html  shell.css  why.html  workspace.html
scanner/: Cargo.toml  driverScanner.ts  exeIndexer.ts  localScanner.ts  progress.ts  report.ts  run.ts  storeScanner.ts  tsconfig.scanner.json
scanner/src/: main.rs
scrapers/: BaseScraper.ts  merge.ts  run.ts  types.ts
server/: db.js  identity.js  passportConfig.js  seed.js  server.js  sqliteSessionStore.js
utils/: pathValidator.ts  paths.ts
(+37 files in other folders)
