[package]
name = "ngpcx-scanner"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "ngpcx-scanner"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
winreg = "0.52"
chrono = "0.4"

[profile.release]
opt-level = 3
strip = true